# cargo-target-gc

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  RELEASE.md  SECURITY.md
.claude/harness/: CONTRACT.md  EVAL.md  HANDOFF.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  unsafe_cleanup_report.md
.github/workflows/: ci.yml
docs/: README.md
docs/architecture/: ARCHITECTURE.md
docs/archive/implementation/: _INDEX.md
docs/dev/: global-claude-md.template
docs/distribution/: ANNOUNCEMENTS.md  CURATED_LISTS.md  DISCOVERABILITY.md  GITHUB_RELEASE_v0.1.3.md
docs/i18n/: README.md  ar.md  de.md  es.md  fi.md  fr.md  hi.md  id.md  ja.md  ko.md  nl.md  pt.md  ru.md  sv.md  sw.md  vi.md  zh.md
docs/implementation/: AGENTS_MD_GUIDE_PLAN.md  CARGO_TARGET_GC_MVP_SCAN_PLAN.md  CARGO_TARGET_GC_PLAN.md  DERUST_MVP_SCAN_PLAN.md  DERUST_TARGET_GC_PLAN.md
docs/oss/: OPEN_SOURCE_READINESS.md
src/: active.rs  agent_skill.rs  clean.rs  cli.rs  config.rs  discovery.rs  lib.rs  main.rs  probe.rs  report.rs  scan.rs  target.rs  test_support.rs
tests/: cli.rs
tests/fixtures/single-package/: Cargo.toml  derust.toml  target-gc.toml
tests/fixtures/single-package/src/: main.rs
tests/fixtures/workspace/crate-a/src/: lib.rs
tests/fixtures/workspace/crate-b/src/: lib.rs
