[package]
name = "derust"
version = "0.1.0"
edition = "2021"
description = "Cargo target-artifact garbage collector: analyze and reclaim target/ build artifacts"
license = "MIT"

[[bin]]
name = "derust"
path = "src/main.rs"

[lib]
name = "derust"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
