[package]
name = "cargo-target-gc"
version = "0.1.3"
edition = "2021"
description = "Cargo target-artifact garbage collector: analyze and reclaim target/ build artifacts"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/MoonKibong/cargo-target-gc"
homepage = "https://github.com/MoonKibong/cargo-target-gc"
documentation = "https://docs.rs/cargo-target-gc"
keywords = ["cargo", "target", "clean", "cleanup", "cache"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cargo-target-gc"
path = "src/main.rs"

[lib]
name = "cargo_target_gc"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
